# ai-irule-migrator

./: .env.template  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
ai_irule_migrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
alembic/: env.py
apps/api/: main.py
apps/api/static/: app.js  index.html  styles.css
docs/: ROADMAP.md
